# zq

./: LICENSE  README.md  lefthook.yml  pyproject.toml
scripts/: bump_version.py
src/zq/: __init__.py  obsidian.py  self.py  setup.py
src/zq/utils/: __init__.py  execute.py  obsidian.py
src/zq/utils/my_win_env/: __init__.py
