[project]
name = "zq"
version = "0.1.7"
description = "zq"
readme = "README.md"
authors = [
    { name = "ZackaryW", email = "36378555+ZackaryW@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = [
    "click>=8.3.1",
]

[project.scripts]
zq = "zq:main"

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"
